--- a/css/main.scss
+++ b/css/main.scss
@@ -14,8 +14,8 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
+$text-color:       #55524d;
+$background-color: #c4c1ba;
 $brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
