--- a/milligram.css
+++ b/milligram.css
@@ -18,11 +18,11 @@ html {
 }
 
 body {
-  color: #606c76;
+  color: #1b1b1b;
   font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   font-size: 1.6em;
   font-weight: 300;
-  letter-spacing: .01em;
+  letter-spacing: .03em;
   line-height: 1.6;
 }
 
@@ -193,8 +193,8 @@ pre > code {
 
 hr {
   border: 0;
-  border-top: 0.1rem solid #f4f5f6;
-  margin: 3.0rem 0;
+  border-top: 0.1rem solid #e3e4e6;
+  margin: 1.0rem 0;
 }
 
 input[type='color'],
